--- a/src/app/pages/articles/article-details/article-details.page.scss
+++ b/src/app/pages/articles/article-details/article-details.page.scss
@@ -86,11 +86,11 @@
     color: white;
     justify-content: space-between;
     width: 90%;
-    font-size: 20px;
-    color :black;
+    font-size: 22px;
+    color :rgb(100, 99, 99);
   }
   .back-cercle{
-    background-color: rgba(161, 159, 159, 0.8);
+    background-color: rgba(228, 224, 224, 0.8);
     opacity: 0.8;
  width: 30px;
  height: 30px;
