--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -185,7 +185,7 @@ ion-content.home{
           font-size:1rem;
           font-weight: 600;
           color:var(--gray);
-
+          cursor: pointer;
         }
         
         .article-author{
