--- a/src/app/pages/articles/article-details/article-details.page.scss
+++ b/src/app/pages/articles/article-details/article-details.page.scss
@@ -19,6 +19,7 @@
     border-radius:0 0 10px 10px;
     // filter: brightness(20%) saturate(120%) blur(10px);
     z-index: -1;
+    position: absolute;
   }
   
   .author-details {
@@ -87,10 +88,10 @@
     justify-content: space-between;
     width: 90%;
     font-size: 22px;
-    color :rgb(100, 99, 99);
+    //color :rgb(100, 99, 99);
   }
   .back-cercle{
-    background-color: rgba(228, 224, 224, 0.8);
+    background-color: rgba(78, 75, 75, 0.8);
     opacity: 0.8;
  width: 30px;
  height: 30px;
@@ -112,11 +113,13 @@
     font-size: 20px;
     color :black;
     z-index: 160;
+    background: white;
+
   }
   .likes{
  
- width: 50px;
- height: 50px;
+ width: 45px;
+ height: 45px;
     border-radius: 50%;
     text-align: center;
     font-size: 14px;
@@ -130,3 +133,12 @@
        font-size: 14px;
        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   }
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+  
