--- a/src/app/pages/articles/article-details/article-details.page.scss
+++ b/src/app/pages/articles/article-details/article-details.page.scss
@@ -141,4 +141,15 @@
     height: 100%;
     background-color: rgba(0, 0, 0, 0.4);
   }
-  
+.spinner{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+ion-spinner {
+  width: 40px;
+  height: 40px;
+  stroke: #444;
+  fill: #222;
+}
