--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -79,3 +79,15 @@ height: 30px;
   border-radius: 50%;
   text-align: center;
 }
+.spinner{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+ion-spinner {
+  width: 40px;
+  height: 40px;
+  stroke: #444;
+  fill: #222;
+}
