--- a/src/app/pages/sign-up/sign-up.page.scss
+++ b/src/app/pages/sign-up/sign-up.page.scss
@@ -1,6 +1,17 @@
+/* Hide scrollbar for Chrome, Safari and Opera */
+.example::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.example {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
 ion-content.signup {
+  overflow: hidden;
   // background-color: white  !important;
-  --background: url(../../../assets/images/bg8.jpg) 0 0/100% 100%
+  --background: url(../../../assets/images/bg12.jpg) 0 0/100% 100%
     no-repeat;
 
   // ion-title {
@@ -59,7 +70,7 @@ ion-content.signup {
             --border:none;
             font-weight: 500;
             font-size: 1rem;
-            --placeholder-color	: var(--gray);
+            --placeholder-color	: white;
             --placeholder-opacity:.7;
           }
           ion-button{
@@ -94,7 +105,7 @@ ion-label {
 }
 ion-card-header {
   font-size: 21px;
-  color: rgb(73, 72, 72);
+  color: rgb(241, 235, 235);
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 .glassy {
