--- a/src/app/pages/sign-up/sign-up.page.scss
+++ b/src/app/pages/sign-up/sign-up.page.scss
@@ -1,15 +1,4 @@
-/* Hide scrollbar for Chrome, Safari and Opera */
-.example::-webkit-scrollbar {
-  display: none;
-}
-
-/* Hide scrollbar for IE, Edge and Firefox */
-.example {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
-}
 ion-content.signup {
-  overflow: hidden;
   // background-color: white  !important;
   --background: url(../../../assets/images/bg12.jpg) 0 0/100% 100%
     no-repeat;
@@ -70,7 +59,7 @@ ion-content.signup {
             --border:none;
             font-weight: 500;
             font-size: 1rem;
-            --placeholder-color	: white;
+            --placeholder-color	: var(--gray);
             --placeholder-opacity:.7;
           }
           ion-button{
