--- a/src/app/pages/articles/article-details/article-details.page.html
+++ b/src/app/pages/articles/article-details/article-details.page.html
@@ -28,7 +28,7 @@
       </div>
       <div class="likes-comments">
         <div class="likes" id='likes' (click)="LikeArticle()"><i class="fa-solid fa-heart" id ='iconlikes' style="color: #ca0202;"></i><br>{{nblikes}}</div>
-        <div class="comments" (click)="showComments()"><i class="fa-solid fa-comment" style="color: #000000;"></i><br> 10</div>
+        <div class="comments" (click)="showComments()"><i class="fa-solid fa-comment" style="color: #000000;"></i><br> {{allcomment.length}}</div>
       </div>
     </div>
   </div>
