--- a/src/app/pages/sign-up/sign-up.page.scss
+++ b/src/app/pages/sign-up/sign-up.page.scss
@@ -59,7 +59,7 @@ ion-content.signup {
             --border:none;
             font-weight: 500;
             font-size: 1rem;
-            --placeholder-color	: var(--gray);
+            --placeholder-color	: var(--gray)j;
             --placeholder-opacity:.7;
           }
           ion-button{
