--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,7 +15,7 @@
           </ion-select>
         </ion-item>
       </ion-list>
-       <img class="profil" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR1osY7x6Dr4JdxETV2aanhoJt0lt0yxe-6kg&usqp=CAU" routerLink="../profile"/>
+       <img class="profil" src="{{profilImg}}" routerLink="../profile"/>
       </div>
       <div class="home-content">
         <!-- ========================================= trending articles ============================= -->
