--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -199,23 +199,26 @@ ion-content.home{
           font-weight: 600;
           color:var(--gray);
           cursor: pointer;
+          line-height: 1.2;
+          max-height: calc(1.2 * 2);
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: normal;
           display: -webkit-box;
           -webkit-line-clamp: 2;
           -webkit-box-orient: vertical;
-          overflow: hidden;
-          text-overflow: ellipsis;
         }
         
         .article-author{
-          justify-self: end;
-          align-self: flex-end;
+          // justify-self: end;
+          // align-self: flex-end;
           display: flex;
           align-items: center;
           justify-content:flex-start;
-          margin-bottom:10px;
+          // margin-bottom:5px;
           // margin-top:15px;
 
-        align-self:baseline;
+        // align-self:baseline;
           img{
             width:20px;
             height:20px;
@@ -224,7 +227,7 @@ ion-content.home{
   
           }
           .date{
-          margin-left : 10px
+          margin-left : 5px
           }
         }
       }
