--- a/src/app/pages/firstpage/firstpage.page.html
+++ b/src/app/pages/firstpage/firstpage.page.html
@@ -21,8 +21,8 @@
   <div class="background">
     <div class="overlay">
       <div class="content">
-        <h1>DevIN</h1>
-        <p>Explore the place where you can share freely your teedings </p>
+        <h1>devIN</h1>
+        <p> The IT enthusiast's ultimate article-sharing hub. Discover and share your favorite IT-related articles with like-minded individuals.</p>
       </div>
       <div class="buttons">
         <ion-button color="light" type="submit" [routerLink]="['/login']">Sign in</ion-button>
