--- a/src/app/pages/firstpage/firstpage.page.scss
+++ b/src/app/pages/firstpage/firstpage.page.scss
@@ -98,7 +98,8 @@
   font-size: 35px;
 }
 .content>p{
-  margin-left: 80px;
+  margin-left: 90px;
+  font-size: larger;
   width: 100%;
 }
 .buttons {
