--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,7 +15,8 @@
           </ion-select>
         </ion-item>
       </ion-list>
-       <img class="profil" src="{{profilImg}}" routerLink="../profile"/>
+       <img *ngIf="profilImg" class="profil" src="{{profilImg}}" routerLink="../profile"/>
+       <img *ngIf="!profilImg" class="profil" src="../../assets/images/avatar.jpg!bg" routerLink="../profile"/>
       </div>
       <div class="home-content">
         <!-- ========================================= trending articles ============================= -->
